# parellizing-agents-demo

./: .cursorrules  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: dependencies.py  main.py  seed.py
app/models/: audio_job.py  campaign.py  voice.py
app/repositories/: audio_job_repository.py  campaign_repository.py  voice_repository.py
app/routers/: audio_jobs.py  campaigns.py  voices.py
app/schemas/: audio_job.py  campaign.py  voice.py
app/services/: audio_job_service.py  campaign_service.py  errors.py  voice_service.py
tests/: conftest.py  test_audio_jobs.py  test_campaigns.py  test_voices.py
